--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>登录</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/style.css}"/>
     <style type="text/css">
         .main {
             width: 400px;
@@ -38,7 +38,7 @@
     <div class="login">
         <div class="loginWraper">
             <div id="loginform" class="loginBox">
-                <form class="form form-horizontal" action="/index" method="post">
+                <form class="form form-horizontal" action="/doLogin" method="post">
                     <div class="row cl">
                         <div class="formControls col-xs-8" style="margin-left: 80px;">
                             <input name="username" type="text" placeholder="账户" class="input-text size-L">
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row cl">
                         <div class="formControls col-xs-8" style="margin-left: 80px;">
-                            <input name="" type="password" placeholder="密码" class="input-text size-L">
+                            <input name="password" type="password" placeholder="密码" class="input-text size-L">
                         </div>
                     </div>
                     <div class="row cl">
