--- a/src/main/resources/templates/manager/public/_header.html
+++ b/src/main/resources/templates/manager/public/_header.html
@@ -3,7 +3,7 @@
 <body>
 <header th:fragment="header" class="navbar-wrapper">
     <div class="navbar navbar-fixed-top">
-        <div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/index">小区物业管理系统</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/index">PMS</a> <span class="logo navbar-slogan f-l mr-10 hidden-xs">v1.0</span> <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
+        <div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/admin/index">小区物业管理系统</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/index">PMS</a> <span class="logo navbar-slogan f-l mr-10 hidden-xs">v1.0</span> <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
             <nav class="nav navbar-nav">
                 <ul class="cl">
                     <li class="dropDown dropDown_hover">
@@ -14,11 +14,11 @@
             <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
                 <ul class="cl">
                     <li>超级管理员</li>
-                    <li class="dropDown dropDown_hover"> <a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
+                    <li class="dropDown dropDown_hover"> <a class="dropDown_A"><span th:text="${session.emp.getName()}"></span><i class="Hui-iconfont">&#xe6d5;</i></a>
                         <ul class="dropDown-menu menu radius box-shadow">
-                            <li><a><span  onclick="admin_add('添加员工','/admin/emp/myInfo/1','500','300')">个人信息</span></a></li>
-                            <li><a><span  onclick="admin_add('修改密码','/admin/emp/doUpdatePassword/1','600','350')">修改密码</span></a></li>
-                            <li><a href="#">退出</a></li>
+                            <li><a><span  th:onclick="|javascript:admin_add('添加员工','/admin/emp/myInfo/${session.emp.getId()}','550','400')|">个人信息</span></a></li>
+                            <li><a><span  th:onclick="|javascript:admin_add('修改密码','/admin/emp/doUpdatePassword/${session.emp.getId()}','600','350')|">修改密码</span></a></li>
+                            <li><a href="/logout">退出</a></li>
                         </ul>
                     </li>
                     <li id="Hui-skin" class="dropDown right dropDown_hover"> <a href="javascript:;" class="dropDown_A" title="换肤"><i class="Hui-iconfont" style="font-size:18px">&#xe62a;</i></a>
