--- a/src/main/resources/templates/manager/public/_header.html
+++ b/src/main/resources/templates/manager/public/_header.html
@@ -13,7 +13,7 @@
             </nav>
             <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
                 <ul class="cl">
-                    <li>超级管理员</li>
+                    <li>管理员</li>
                     <li class="dropDown dropDown_hover"> <a class="dropDown_A"><span th:text="${session.emp.getName()}"></span><i class="Hui-iconfont">&#xe6d5;</i></a>
                         <ul class="dropDown-menu menu radius box-shadow">
                             <li><a><span  th:onclick="|javascript:admin_add('添加员工','/admin/emp/myInfo/${session.emp.getId()}','550','400')|">个人信息</span></a></li>
