--- a/src/main/resources/templates/manager/repair-add.html
+++ b/src/main/resources/templates/manager/repair-add.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
-    <title>添加车位</title>
+    <title>添加维修</title>
 </head>
 <body>
 <article class="cl pd-20">
