--- a/src/main/resources/templates/owner/index.html
+++ b/src/main/resources/templates/owner/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/style.css}"/>
 
     <title>PMS业主端</title>
+    <style type="text/css">
+        body {
+            background-image: url("/static/assets/static/images/city.jpg");
+        }
+    </style>
 </head>
 <body>
 <!--_header 作为公共模版分离出去-->
@@ -25,7 +30,7 @@
 
 </div>
 <!--/_header 作为公共模版分离出去-->
-<h1 style="text-align: center;line-height: 500px;">欢迎来到小区物业管理系统业主端</h1>
+<h1 style="text-align: center;line-height: 500px;color: #ffffff;font-size: 60px;">欢迎来到小区物业管理系统业主端</h1>
 
 
 <!--_footer 作为公共模版分离出去-->
