--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui/css/H-ui.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/skin/default/skin.css}"
+          id="skin"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/style.css}"/>
     <style type="text/css">
         .main {
@@ -14,9 +15,15 @@
             height: 250px;
             float: right;
             margin-right: 50px;
-            margin-top: 30px;
+            margin-top: -350px;
             background-color: rgba(255, 255, 255, 0.2);
             border-radius: 4px;
+        }
+
+        .name_title {
+            color: #ffffff;
+            line-height: 500px;
+            margin-left: 90px;
         }
 
         .login {
@@ -26,13 +33,15 @@
         }
 
         body {
-            background-image: url('/static/assets/static/images/loginbg.jpg');
+            background-image: url('/static/assets/static/images/log.jpg');
         }
     </style>
 </head>
 
 <body>
-<h1 style="float: right; margin-right: 190px;margin-top: 100px;color: #F0F0EE;">登&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
+<h1 class="name_title">小 区 物 业 管 理 系 统</h1>
+<div style="clear: both; "></div>
+<h1 style="float: right; margin-right: 190px;margin-top: -450px;color: #F0F0EE;">登&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
 <div style="clear: both; "></div>
 <div class="main">
     <div class="login">
