--- a/src/main/resources/templates/manager/emp-list.html
+++ b/src/main/resources/templates/manager/emp-list.html
@@ -59,6 +59,7 @@
 					<option value="女">女</option>
 				</select>
 				</span>
+                    <input type="text" class="input-text" style="width:90px" placeholder="年龄" id="age" name="age">
                     <input type="text" class="input-text" style="width:150px" placeholder="手机号" id="phone"
                            name="phone"/>
                     <span class="select-box" style="width:80px">
@@ -89,7 +90,7 @@
             <table class="table table-border table-bordered table-bg">
                 <thead>
                 <tr>
-                    <th scope="col" colspan="9">员工列表</th>
+                    <th scope="col" colspan="10">员工列表</th>
                 </tr>
                 <tr class="text-c">
 
@@ -97,8 +98,9 @@
                     <th width="150">账号</th>
                     <th width="90">姓名</th>
                     <th width="50">性别</th>
+                    <th width="50">年龄</th>
                     <th width="90">手机</th>
-                    <th width="150">角色</th>
+                    <th width="110">角色</th>
                     <th width="130">入职时间</th>
                     <th width="100">操作</th>
                 </tr>
@@ -111,6 +113,7 @@
                     <td th:text="${emp.account}"></td>
                     <td th:text="${emp.name}"></td>
                     <td th:text="${emp.sex}"></td>
+                    <td th:text="${emp.age}"></td>
                     <td th:text="${emp.phone}"></td>
                     <td th:switch="${emp.roleId}">
                         <span th:case="'0'">管理员</span>
