--- a/src/main/resources/templates/manager/owner-add.html
+++ b/src/main/resources/templates/manager/owner-add.html
@@ -63,6 +63,12 @@
             </div>
         </div>
         <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>年龄：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="18-120" id="age" name="age">
+            </div>
+        </div>
+        <div class="row cl">
             <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
                 <input class="btn btn-primary radius" onclick="insert()" type="button"
                        value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
@@ -85,6 +91,12 @@
 <script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
 <script type="text/javascript">
     function insert() {
+        var pwd1 = document.getElementById("password").value;
+        var pwd2 = document.getElementById("password2").value;
+        if(pwd1!=pwd2){
+            alert("输入的密码不匹配");
+            return false;
+        }
         //得到表单数据，序列化表单
         var owner = $("#form-admin-add").serialize();
         //使用ajax post提交方式 ，默认json数据/*[[@{/index/ajaxtest}]]*/
