--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,15 +47,15 @@
     <div class="login">
         <div class="loginWraper">
             <div id="loginform" class="loginBox">
-                <form class="form form-horizontal" action="/doLogin" method="post">
+                <form class="form form-horizontal">
                     <div class="row cl">
                         <div class="formControls col-xs-8" style="margin-left: 80px;">
-                            <input name="username" type="text" placeholder="账户" class="input-text size-L">
+                            <input id="username" name="username" type="text" placeholder="账户" class="input-text size-L">
                         </div>
                     </div>
                     <div class="row cl">
                         <div class="formControls col-xs-8" style="margin-left: 80px;">
-                            <input name="password" type="password" placeholder="密码" class="input-text size-L">
+                            <input id="password" name="password" type="password" placeholder="密码" class="input-text size-L">
                         </div>
                     </div>
                     <div class="row cl">
@@ -72,8 +72,8 @@
                     </div>
                     <div class="row cl">
                         <div class="formControls col-xs-8 col-xs-offset-3">
-                            <input name="" type="submit" class="btn btn-success radius size-L"
-                                   value="&nbsp;登&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp;">
+                            <input name="" type="button" class="btn btn-success radius size-L"
+                                   id="btnLogin" value="&nbsp;登&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp;">
                             &nbsp;&nbsp;&nbsp;&nbsp;
                             <input name="" type="reset" class="btn btn-default radius size-L"
                                    value="&nbsp;取&nbsp;&nbsp;&nbsp;&nbsp;消&nbsp;">
@@ -84,5 +84,38 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script>
+    $("#btnLogin").click(function(){
+        var role=null;
+        var val=$('input:radio[name="role"]:checked').val();
+        if(val==null){
+            return false;
+        }
+        else{
+            role = val;
+        }
+        var name=$("#username").val();
+        var pwd=$("#password").val();
+        console.log(name,pwd);
+        $.ajax({
+            url:'http://localhost:8380/doLogin',
+            type:'post',
+            data:{'username':name,'password':pwd,'role':role},
+            dataType:'json',
+            success:function(data){
+                if(data.code=='200'){
+                    location.href=data.data;
+                }else{
+                    alert(data.message);
+                }
+            },
+            error:function(data){
+                alert(data.message);
+            }
+        })
+    });
+</script>
 </body>
 </html>
+
