--- a/src/main/resources/templates/manager/facility-list.html
+++ b/src/main/resources/templates/manager/facility-list.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui/css/H-ui.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/skin/default/skin.css}"
+          id="skin"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
@@ -40,29 +41,36 @@
     </nav>
     <div class="Hui-article">
         <article class="cl pd-20">
-			<form action="/admin/facility/list" method="post">
-            <div class="text-c">
-                使用日期：
-                <input name="start" type="text"
-                       onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})" id="datemin"
-                       class="input-text Wdate" style="width:120px;">
-                -
-                <input name="end" type="text"
-                       onfocus="WdatePicker({minDate:'#F{$dp.$D(\'datemin\')}',maxDate:'%y-%M-%d'})" id="datemax"
-                       class="input-text Wdate" style="width:120px;">
-                <input type="text" class="input-text" style="width:120px" placeholder="名称" id="name" name="name">
-                <input type="text" class="input-text" style="width:150px" placeholder="地点" id="site" name="site">
-                <input type="text" class="input-text" style="width:120px" placeholder="数量" id="count" name="count">
-                <span class="select-box" style="width:75px">
+            <form action="/admin/facility/list" method="post">
+                <div class="text-c">
+                    使用日期：
+                    <input name="start" type="text"
+                           onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})" id="datemin"
+                           class="input-text Wdate" style="width:120px;">
+                    -
+                    <input name="end" type="text"
+                           onfocus="WdatePicker({minDate:'#F{$dp.$D(\'datemin\')}',maxDate:'%y-%M-%d'})" id="datemax"
+                           class="input-text Wdate" style="width:120px;">
+                    <input type="text" class="input-text" style="width:120px" placeholder="名称" id="name" name="name">
+                    <input type="text" class="input-text" style="width:150px" placeholder="地点" id="site" name="site">
+                    <input type="text" class="input-text" style="width:120px" placeholder="数量" id="count" name="count">
+                    <span class="select-box" style="width:90px">
+				<select class="select" name="status" size="1">
+					<option value="">是否使用</option>
+					<option value="未使用">未使用</option>
+					<option value="已使用">已使用</option>
+				</select>
+				</span>
+                    <span class="select-box" style="width:75px">
 				<select class="select" name="sort" size="1">
 					<option value="0" selected>倒序</option>
 					<option value="1">正序</option>
 				</select>
 				</span>
-                <button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> 搜索
-                </button>
-            </div>
-			</form>
+                    <button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> 搜索
+                    </button>
+                </div>
+            </form>
             <div class="cl pd-5 bg-1 bk-gray mt-20">
                 <span class="l"> <a href="javascript:;" onclick="admin_add('添加设施','/admin/facility/doAdd','800','500')"
                                     class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加设施</a> </span>
@@ -71,7 +79,7 @@
             <table class="table table-border table-bordered table-bg">
                 <thead>
                 <tr>
-                    <th scope="col" colspan="9">设施列表</th>
+                    <th scope="col" colspan="10">设施列表</th>
                 </tr>
                 <tr class="text-c">
 
@@ -79,6 +87,7 @@
                     <th width="90">设施名称</th>
                     <th width="50">数量</th>
                     <th width="200">地点</th>
+                    <th width="200">图片</th>
                     <th width="130">使用时间</th>
                     <th width="90">是否使用</th>
                     <th width="100">操作</th>
@@ -91,13 +100,14 @@
                     <td th:text="${facility.name}"></td>
                     <td th:text="${facility.count}"></td>
                     <td th:text="${facility.site}"></td>
+                    <td><img width="120" height="50" th:src="@{'/static/'+${facility.picture}}"></td>
                     <td th:text="${#temporals.format(facility.startTime,'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td th:text="${facility.status}"></td>
                     <td class="td-manage"><a title="编辑" href="javascript:;"
-											 th:onclick="|javascript:admin_edit('员工编辑','/admin/facility/doUpdate?id=${facility.id}','1','800','500')|"
+                                             th:onclick="|javascript:admin_edit('员工编辑','/admin/facility/doUpdate?id=${facility.id}','1','800','500')|"
                                              class="ml-5" style="text-decoration:none"><i
                             class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;"
-																	 th:onclick="|javascript:admin_del(this,'${facility.id}')|"
+                                                                     th:onclick="|javascript:admin_del(this,'${facility.id}')|"
                                                                      style="text-decoration:none"><i
                             class="Hui-iconfont">&#xe6e2;</i></a></td>
                 </tr>
@@ -137,22 +147,22 @@
     function admin_del(obj, id) {
         layer.confirm('确认要删除吗？', function (index) {
             //此处请求后台程序，下方是成功后的前台处理……
-			$.ajax({
-				type: "POST",
-				url: "http://localhost:8380/admin/facility/delete?id=" + id,
-				data: null,
-				success: function (result) {
-					if (result.code == 200) {
-						$(obj).parents("tr").remove();
-						layer.msg('已删除! code=' + result.code, {icon: 1, time: 1000});
-					} else {
-						layer.msg('删除失败! code=' + result.code, {icon: 1, time: 1000});
-					}
-				},
-				error: function (e) {
-					layer.msg('删除!失败 m=' + e.code, {icon: 1, time: 1000});
-				}
-			});
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8380/admin/facility/delete?id=" + id,
+                data: null,
+                success: function (result) {
+                    if (result.code == 200) {
+                        $(obj).parents("tr").remove();
+                        layer.msg('已删除! code=' + result.code, {icon: 1, time: 1000});
+                    } else {
+                        layer.msg('删除失败! code=' + result.code, {icon: 1, time: 1000});
+                    }
+                },
+                error: function (e) {
+                    layer.msg('删除!失败 m=' + e.code, {icon: 1, time: 1000});
+                }
+            });
         });
     }
 
