--- a/src/main/resources/templates/manager/owner-list.html
+++ b/src/main/resources/templates/manager/owner-list.html
@@ -144,7 +144,7 @@
             //此处请求后台程序，下方是成功后的前台处理……
             $.ajax({
                 type: "POST",
-                url: "http://localhost:8380/owner/delete?id=" + id,
+                url: "http://localhost:8380/admin/owner/delete?id=" + id,
                 data: null,
                 success: function (result) {
                     if (result.code == 200) {
