--- a/src/main/resources/templates/owner/repair-add.html
+++ b/src/main/resources/templates/owner/repair-add.html
@@ -45,7 +45,7 @@
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>报修时间：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="create" name="create">
+                <input type="text" class="input-text" value="" placeholder="yyyy-MM-dd" id="create" name="create">
             </div>
         </div>
         <input name="status" type="hidden" id="sex-1" value="1"><!--状态：未受理-->
